syntax = "proto3";

package idl;

import "item.proto";

option go_package = "./pb";


message GetItemsRequest {
    repeated string item_ids = 1;
}

message GetItemsResponse{
    repeated Item items = 1;
}